--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -113,7 +113,7 @@ h2{
     background-position: center;
 }
 
-.work-hilight p{
+.work-hilight a{
     position: absolute;
     bottom:0;
     right:0;
